@@ -34,6 +34,7 @@ $ -> Language fix or change
  # $ Translating the label field instead of the name field in JLIB_FORM_VALIDATE_FIELD_INVALID error
  # [#23409] Category Icon on Components Menu
  # [#23278] media_manager from JToolbarHelper throws javascript errors
+ ^ Load the .sys language file in com_categories
 
 21-Nov-2010 Jean-Marie Simonet
  # [#23361] default template in component.php view always in use
